# ETFBG_SI

./: .gitignore  README.md  main.py
II GODINA/ASP2/DOMACI/13S112ASP2_DZ3_2526_materijali/: CMakeLists.txt  Maja_Heuristic.cpp  Maja_Heuristic.h  Marko_Heuristic.cpp  Marko_Heuristic.h  Sort.cpp  Sort.h  image_processor.h  main.cpp  sorting.h
II GODINA/ASP2/DOMACI/DZ2/: CMakeLists.txt  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  Tree234.cpp  Tree234.h  asp2dz2p1.cpp
II GODINA/ASP2/DOMACI/DZ2/src/: Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  Tree234.cpp  Tree234.h
II GODINA/ASP2/IMPLEMENTACIJA/SORTIRANJE/: CMakeLists.txt  Sort_Context.cpp  main.cpp
II GODINA/ASP2/IMPLEMENTACIJA/SORTIRANJE/Data Arrays/: Data_Array.cpp  Data_Array.h
II GODINA/ASP2/IMPLEMENTACIJA/SORTIRANJE/Observers/: Console_Logger.cpp  Console_Logger.h  File_Logger.cpp  File_Logger.h  Observer.cpp  Observer.h
II GODINA/ASP2/IMPLEMENTACIJA/SORTIRANJE/Sort Context/: Sort_Context.cpp  Sort_Context.h
II GODINA/ASP2/IMPLEMENTACIJA/SORTIRANJE/Sorting Alghoritms/: Bubble_Sort.cpp  Bubble_Sort.h  Counting_Sort.cpp  Counting_Sort.h  Heap_Sort.cpp  Heap_Sort.h  Insertion_Sort.cpp  Insertion_Sort.h  Quick_Sort.cpp  Quick_Sort.h  Radix_Sort.cpp  Radix_Sort.h  Selection_Sort.cpp  Selection_Sort.h  Shake_Sort.cpp  Shake_Sort.h  Shell_Sort.cpp  Shell_Sort.h  Sorting_Algorithm.cpp  Sorting_Algorithm.h  sorting_algorithms.h
II GODINA/OOP1/PROJEKAT_25_26/: CMakeLists.txt  README.md
II GODINA/OOP1/PROJEKAT_25_26/src/: CLI.h  main.cpp
II GODINA/OOP1/PROJEKAT_25_26/src/commands/: Batch.h  Batch_Command.cpp  Batch_Command.h  Command.cpp  Command.h  Date.h  DateCommand.cpp  Date_Command.h  Echo.cpp  Echo.h  Echo_Command.cpp  Echo_Command.h  Head.h  Head_Command.cpp  Head_Command.h  Last_Command.cpp  Last_Command.h  Prompt.h  Prompt_Command.cpp  Prompt_Command.h  Rm.cpp  Rm.h  Rm_Command.cpp  Rm_Command.h  Time.h  Time_Command.cpp  Time_Command.h  Touch.h  Touch_Command.cpp  Touch_Command.h  Tr.cpp  Tr.h  Tr_Command.cpp  Tr_Command.h  Truncate.cpp  Truncate.h  Truncate_Command.cpp  Truncate_Command.h  Wc.cpp  Wc.h  (+2 more)
II GODINA/OOP1/PROJEKAT_25_26/src/error/: Error.cpp  Error.h  Execution_Error.cpp  Execution_Error.h  IOError.cpp  IOError.h  Lexical_Error.cpp  Lexical_Error.h  Semantic_Error.cpp  Semantic_Error.h  Syntax_Error.cpp  Syntax_Error.h  Unknown_Command_Error.cpp  Unknown_Command_Error.h
II GODINA/OOP1/PROJEKAT_25_26/src/execution/: Batch_Plan.cpp  Batch_Plan.h  Execution_Plan.h  Pipe_Line_Plan.cpp  Pipe_Line_Plan.h  Single_Command_Plan.cpp  Single_Command_Plan.h
II GODINA/OOP1/PROJEKAT_25_26/src/interpreter/: Interpreter.cpp  Interpreter.h
II GODINA/OOP1/PROJEKAT_25_26/src/parser/: Parser.cpp  Parser.h
II GODINA/OOP1/PROJEKAT_25_26/src/tokenizer/: Token.h  (+2 more)
II GODINA/OOP1/ZADACI ZA VEZBU/: CMakeLists.txt
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK 1/: main.cpp  point.cpp  point.h
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK 2/: angle.cpp  angle.h  main.cpp
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK 3/: main.cpp  queue.cpp  queue.h
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK 4/: cuboid.cpp  cuboid.h  main.cpp
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK 5/: directory.cpp  directory.h  jmbg.cpp  jmbg.h  main.cpp  person.h
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK 6/: Array.cpp  Array.h  Complex.cpp  Complex.h  Iterator.cpp  Iterator.h  main.cpp
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK7/: Clock.cpp  Clock.h  ClockWD.cpp  ClockWD.h  main.cpp
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK8/: Cuboid.cpp  Cuboid.h  Object.h  Sphere.cpp  Sphere.h  main.cpp
II GODINA/OOP1/ZADACI ZA VEZBU/ZADATAK9/: Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Segment.cpp  Segment.h  main.cpp
(+193 files in other folders)
